--- a/index.html
+++ b/index.html
@@ -375,11 +375,11 @@
           </div>
           <div>
             <label for="name">Your Name</label>
-            <input id="name" type="text" placeholder="e.g. Aditi" />
+            <input id="name" type="text" placeholder="e.g. Annie" />
           </div>
           <div>
             <label for="partnerName">Someone you love / interest</label>
-            <input id="partnerName" type="text" placeholder="e.g. Bhor" />
+            <input id="partnerName" type="text" placeholder="e.g. Bob" />
           </div>
           <div class="controls">
             <button id="readBtn" class="btn">Generate reading</button>
